--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,7 @@ body {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
 }
+
+html {
+  scroll-behavior: smooth;
+}
