--- a/backend/app/views/application_mailer/ticket_response.html.erb
+++ b/backend/app/views/application_mailer/ticket_response.html.erb
@@ -1,11 +1,15 @@
-<h1>Hello, <%= @ticket.customer_name %></h1>
+<div class="email-header">
+  <h1>Hello, <%= @ticket.customer_name %></h1>
+</div>
+<div class="email-body">
   <p>
-    We have responded to your ticket [##<%= @ticket.id %>]. Here is our response:
+    We have responded to your ticket [<span class="ticket-id">#<%= @ticket.id %></span>]. Here is our response:
   </p>
   <p>
     <%= @response %>
-    <%= @attachment%>
+    <%= @attachment %>
   </p>
   <p>
     Thank you for your patience.
   </p>
+</div>
