--- a/backend/app/views/application_mailer/ticket_response.html.erb
+++ b/backend/app/views/application_mailer/ticket_response.html.erb
@@ -1,9 +1,9 @@
 <div class="email-header">
-  <h1>Hello, <%= @ticket.customer_name %></h1>
+  <h1>SmartAgent</h1>
 </div>
 <div class="email-body">
   <p>
-    We have responded to your ticket [<span class="ticket-id">#<%= @ticket.id %></span>]. Here is our response:
+    We have responded to your request [<span class="ticket-id">Ticket ID #<%= @ticket.id %></span>].
   </p>
   <p>
     <%= @response %>
